# ffmpeg-tutorials

04_simple_filter/: CMakeLists.txt  ffmpegcv.hpp  filter.cpp  filter.cpp.bak  something.h
